@startuml

title __SNMP-MONITOR's Class Diagram__\n

  namespace src  {
    class Host {
    }
  }
  

  namespace src {
    class Parser {
    }
  }
  

  namespace src {
    class Process {
    }
  }
  

  namespace src {
    class SNMPClient {
    }
  }
  

  namespace src {
    class SNMPMonitor {
    }
  }
  

  namespace src {
    class Worker {
    }
  }
  

  namespace src {
    class databaseConnecter {
    }
  }
  

  SNMPMonitor o-- Parser : giveMeHosts
  Worker .up.|> java.lang.Runnable
  Worker o-- Host : host
  Worker o-- SNMPClient : snmp
  databaseConnecter .up.|> java.lang.Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
